fixes icons widths and alignment on homepage featured links list

--- a/css/home.css
+++ b/css/home.css
@@ -591,7 +591,9 @@ ______________________________________________________________________________ *
     margin: 0 0 0.75em 0;
 }
 .hero .featured-links ul li .fa {
-    width: 1.25em;
+    width: 2em;
+    /* margin-right: 0.5em; */
+    text-align: center;
     /*display: inline;
     float: left;
     margin-right: 16px;
@@ -681,8 +683,9 @@ ______________________________________________________________________________ *
     margin-top: -12px;
 }
 .gbl.hero .links .fa {
-    width: 1.25em;
-    /*margin-right:0.5em*/
+    width: 2em;
+    /* margin-right: 0.5em; */
+    text-align: center;
 }
 .gbl.hero .aside {
     float: left;
